--- a/pom.xml
+++ b/pom.xml
@@ -16,12 +16,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <commonbiz.version>1.0.1</commonbiz.version>
         <cxf.version>3.1.6</cxf.version>
-        <package.name>nslcmservice</package.name>
+        <package.name>org.openo.sdno.nslcm</package.name>
     </properties>
-
-    <scm>
-        <tag>HEAD</tag>
-    </scm>
 
     <modules>
         <module>service</module>
