--- a/deployment/pom.xml
+++ b/deployment/pom.xml
@@ -11,10 +11,6 @@
     <artifactId>nslcm-deployment</artifactId>
     <packaging>jar</packaging>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-
     <build>
         <pluginManagement>
             <plugins>
@@ -69,7 +65,7 @@
                                 ant.copy(todir:
                                 "${deployUnzip}/webapps/ROOT") {
                                 fileset(dir:
-                                "${project.build.directory}/../../service/target/${package.name}-${project.version}")
+                                "${project.build.directory}/../../service/target/${package.name}")
                                 }
 
                                 ant.zip(destfile:
