Fix End2End test problem and add IT Testcases.
Signed-off-by: angilecoder <zhaoyangzhao.zhaoyang@huawei.com>
Change-Id: Idb6818e99febbe4b63996b7595fcb1142747748a

--- a/deployment/pom.xml
+++ b/deployment/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <artifactId>nslcm-deployment</artifactId>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
 
     <build>
         <pluginManagement>
