add test case json for the test from nslcm to service
Change-Id: I756e128b36c8dffe278359f003947549135332f5
Signed-off-by: wangweihua <wangweihua2@huawei.com>

--- a/service/src/integration-test/resources/server.properties
+++ b/service/src/integration-test/resources/server.properties
@@ -7,6 +7,9 @@ serverip=127.0.0.1
 ## Server Port
 serverport=8080
 
+## Time Out
+timeout=1000000
+
 ## Http Moco Server Port
 mocohttpport=12306
 
