--- a/service/src/main/webapp/WEB-INF/web.xml
+++ b/service/src/main/webapp/WEB-INF/web.xml
@@ -33,7 +33,7 @@
     </listener>
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>WEB-INF/classes/spring/*.xml,classpath*:META-INF/spring/*.xml, classpath*:spring/*.xml</param-value>
+        <param-value>WEB-INF/classes/spring/*.xml,classpath*:META-INF/spring/*.xml,classpath*:spring/*.xml,classpath*:META-INF/spring/*.xml</param-value>
     </context-param>
 
     <session-config>
