Add UT cases for sdno-nslcm project
Add UT cases for sdno-nslcm project

SDNO-1061

Signed-off-by: angilecoder <zhaoyangzhao.zhaoyang@huawei.com>
Change-Id: I5f5d05726d481c890af9f5352a9b79ac5aedb6ec

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -152,6 +152,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.193</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-jaxrs</artifactId>
             <version>1.9.2</version>
