Add wait time for cpe online
Add wait time for cpe online, when cpe is registered on controller, it will cost some time to wait for cpe online.

SDNO-1363

Signed-off-by: angilecoder <zhaoyangzhao.zhaoyang@huawei.com>
Change-Id: I3137fa2c4f2dd44eb88685fe0ff42982c05a03b2

--- a/deployment/src/main/release/etc/siteparam.properties
+++ b/deployment/src/main/release/etc/siteparam.properties
@@ -19,8 +19,11 @@
 ## Site reliability
 reliability=singleFixedNetwork
 
-## Site Descriptor
+## Site descriptor
 siteDescriptor=enterprise_l2cpe
 
 ## Whether is encrypted
 isEncrypt=true
+
+## Time waiting for cpe online(ms)
+cpeOneTime=3000
